done some basics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMakeLists.txt for opencv with c++
 cmake_minimum_required(VERSION 3.0.0)
-project(learn VERSION 0.1.0)
+project(virtual_paint VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
@@ -8,9 +8,9 @@ enable_testing()
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(main basics/warp_perspective.cpp)
+add_executable(virtual_paint projects/virtual_paint.cpp)
 
-target_link_libraries(main ${OpenCV_LIBS})
+target_link_libraries(virtual_paint ${OpenCV_LIBS})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
